investigator/overlays/test/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: investigator-consumer
spec:
  replicas: 1
  selector:
    service: investigator-consumer
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: investigator
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: investigator-consumer
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: investigator
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      serviceAccountName: investigator
      containers:
        - image: investigator
          name: investigator-consumer
          env:
            - name: SUBCOMMAND
              value: "consumer"
            - name: DEBUG_LEVEL
              value: "0"
            - name: APP_SCRIPT
              value: "app.sh"
            - name: KAFKA_CONSUMER_GROUP_ID
              value: "thoth.investigator"
            - name: KAFKA_CONSUMER_ENABLE_AUTO_COMMIT
              value: "false"
            - name: KAFKA_CONSUMER_AUTO_OFFSET_RESET
              value: "latest"
            - name: KAFKA_CONSUMER_MAX_POLL_INTERVAL_MS
              value: "900000"
            - name: KAFKA_BOOTSTRAP_SERVERS
              valueFrom:
                configMapKeyRef:
                  name: kafka
                  key: kafka-bootstrap-servers
            - name: KAFKA_SECURITY_PROTOCOL
              valueFrom:
                configMapKeyRef:
                  key: kafka-protocol
                  name: kafka
            - name: KAFKA_SSL_CA_LOCATION
              value: "/mnt/secrets/kafka_ca.crt"
            - name: KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM
              value: "none"
            - name: KNOWLEDGE_GRAPH_HOST
              valueFrom:
                configMapKeyRef:
                  name: thoth
                  key: postgresql-host
            - name: KNOWLEDGE_GRAPH_PORT
              value: "5432"
            - name: KNOWLEDGE_GRAPH_SSL_DISABLED
              value: "1"
            - name: KNOWLEDGE_GRAPH_USER
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-user
            - name: KNOWLEDGE_GRAPH_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-password
            - name: KNOWLEDGE_GRAPH_DATABASE
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-name
            - name: THOTH_BACKEND_NAMESPACE
              valueFrom:
                configMapKeyRef:
                  name: thoth
                  key: backend-namespace
            - name: THOTH_MIDDLETIER_NAMESPACE
              valueFrom:
                configMapKeyRef:
                  name: thoth
                  key: middletier-namespace
            - name: THOTH_INFRA_NAMESPACE
              valueFrom:
                configMapKeyRef:
                  name: thoth
                  key: infra-namespace
            - name: THOTH_CEPH_BUCKET
              valueFrom:
                configMapKeyRef:
                  key: bucket-name
                  name: ceph
            - name: THOTH_CEPH_BUCKET_PREFIX
              valueFrom:
                configMapKeyRef:
                  key: bucket-prefix
                  name: ceph
            - name: THOTH_S3_ENDPOINT_URL
              valueFrom:
                configMapKeyRef:
                  key: host
                  name: ceph
            - name: THOTH_DEPLOYMENT_NAME
              valueFrom:
                configMapKeyRef:
                  key: deployment-name
                  name: thoth
            - name: THOTH_LOGGING_NO_JSON
              valueFrom:
                configMapKeyRef:
                  name: thoth
                  key: logging-no-json
            - name: KUBERNETES_API_URL
              value: "https://kubernetes.default.svc.cluster.local"
            - name: KUBERNETES_VERIFY_TLS
              value: "0"
            - name: THOTH_INVESTIGATOR_SCHEDULE_REVSOLVER
              value: "0"
            - name: THOTH_INVESTIGATOR_SCHEDULE_KEBECHET_ADMIN
              value: "0"
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 6066
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/_health"
              port: 6066
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 1
            # Give this consumer 2 hours to finish
            initialDelaySeconds: 7200
            periodSeconds: 10
            tcpSocket:
              port: 80
      volumes:
        - name: secrets
          secret:
            secretName: "kafka"
            items:
              - key: kafka_ca.crt
                path: kafka_ca.crt
  test: false
