investigator/overlays/test/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: investigator-faust-web
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 6066
  selector:
    service: investigator-consumer
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: investigator
    app.kubernetes.io/managed-by: aicoe-thoth-devops
